--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>
     </div>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
