--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <img src="icons/right.svg" alt="next">
                     </div>
                 </div>
-                <!-- <div class="offer__slider-wrapper">
+                <div class="offer__slider-wrapper">
                     <div class="offer__slide">
                         <img src="img/slider/pepper.jpg" alt="pepper">
                     </div>
@@ -126,7 +126,7 @@
                     <div class="offer__slide">
                         <img src="img/slider/paprika.jpg" alt="paprika">
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
