--- a/index.html
+++ b/index.html
@@ -277,6 +277,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/bundle.js"></script>
 </body>
 </html>
